Stop jumps on keypress

--- a/resources/style.css
+++ b/resources/style.css
@@ -22,7 +22,7 @@ window {
 .keyboard-key:active {
     background: #4d5768;
     border-top: 4px solid #242a38;
-    border-bottom: 1px solid #242a38;
+    border-bottom: 0px solid #242a38;
 }
 
 .keyboard-key.modifier {
